--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="">
-<meta name="description" content="I am Manoj Sapkota, Genomics Postdoc at Breeding Insight in Cornell University. I am passionate about plant breeding, genetics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 5 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects." />
+<meta name="description" content="I am Manoj Sapkota, Genomics Postdoc at Breeding Insight in Cornell University. I am passionate about plant breeding, genetics, genomics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 6 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects." />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
@@ -39,18 +39,18 @@
 
 
 <meta itemprop="name" content="About me">
-<meta itemprop="description" content="I am Manoj Sapkota, Genomics Postdoc at Breeding Insight in Cornell University. I am passionate about plant breeding, genetics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 5 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects.">
+<meta itemprop="description" content="I am Manoj Sapkota, Genomics Postdoc at Breeding Insight in Cornell University. I am passionate about plant breeding, genetics, genomics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 6 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects.">
 
-<meta itemprop="wordCount" content="1080">
+<meta itemprop="wordCount" content="1107">
 <meta itemprop="keywords" content="" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About me"/>
-<meta name="twitter:description" content="I am Manoj Sapkota, Genomics Postdoc at Breeding Insight in Cornell University. I am passionate about plant breeding, genetics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 5 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects."/>
+<meta name="twitter:description" content="I am Manoj Sapkota, Genomics Postdoc at Breeding Insight in Cornell University. I am passionate about plant breeding, genetics, genomics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 6 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects."/>
 
 
 
     <meta property="og:title" content="About me" />
-<meta property="og:description" content="I am Manoj Sapkota, Genomics Postdoc at Breeding Insight in Cornell University. I am passionate about plant breeding, genetics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 5 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects." />
+<meta property="og:description" content="I am Manoj Sapkota, Genomics Postdoc at Breeding Insight in Cornell University. I am passionate about plant breeding, genetics, genomics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 6 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://manojsapkota.github.io/hobbies/" /><meta property="article:section" content="" />
 
@@ -140,9 +140,10 @@
          alt="banner" width="100%"/>
 </figure>
 
-<p>I am <strong>Manoj Sapkota</strong>, Genomics Postdoc at <a href="https://breedinginsight.org/">Breeding Insight</a> in Cornell University. I am passionate about plant breeding, genetics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 5 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects. I call myself an excellent team player and believe that we can achieve huge success working together. I am known as being very helpful and versatile among my colleagues.</p>
-<p>In my current role, I collaborate with USDA breeders working on specialty crops like alfalfa, lettuce, blueberry, and cucumber in projects related to exploring genetic diversity, QTL mapping, GWAS and Genomic selections. Additionally, I perform genomic and bioinformatics analysis to help breeders develop breeding strategies and prepare reports, manuscripts, and presentations to share research results and findings.</p>
-<p>Previously, I was a PhD student in the <a href="https://plantbreeding.caes.uga.edu/">Institute of Plant Breeding, Genetics, and Genomics</a> at the University of Georgia, Athens, GA, US and a member of <a href="https://vanderknaaplab.uga.edu/index.html">van der Knaap lab</a> working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD.</p>
+<p>I am <strong>Manoj Sapkota</strong>, Genomics Postdoc at <a href="https://breedinginsight.org/">Breeding Insight</a> in Cornell University. I am passionate about plant breeding, genetics, genomics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 6 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects. I call myself an excellent team player and believe that we can achieve huge success working together. I am known as being very helpful and versatile among my colleagues.</p>
+<p>In my current role, I collaborate with USDA breeders working on specialty crops  ranging from diploids to polyploids like alfalfa, lettuce, blueberry, and cucumber in projects related to exploring genetic diversity, QTL mapping, GWAS and Genomic selections. Additionally, I perform genomic and bioinformatics analysis to help breeders develop breeding strategies and prepare reports, manuscripts, and presentations to share research results and findings. I also contribute to the development of <a href="https://breedinginsight.org/breeding-solutions/open-source-dartag-marker-panels/">marker panels</a> for the abovementioned crop species.</p>
+<p>Previously, I was a PhD student in the <a href="https://plantbreeding.caes.uga.edu/">Institute of Plant Breeding, Genetics, and Genomics</a> at the University of Georgia, Athens, GA, US and a member of <a href="https://vanderknaaplab.uga.edu/index.html">van der Knaap lab</a> working under the supervision of Dr. Esther van der Knaap.</p>
+<p>I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD.</p>
 <h2 id="education">Education</h2>
 <p><strong>University of Georgia (UGA), Athens, GA, USA</strong></p>
 <p><em>Ph.D</em>., Plant Breeding, Genetics and Genomics, Institute of Plant Breeding, Genetics and Genomics (IPBGG); 2023</p>
@@ -162,8 +163,8 @@ Major in Plant Breeding, 2016</p>
 <ul>
 <li>Linux shell script programming</li>
 <li>Bulk segregant and QTLseq analysis</li>
-<li>RNAseq, differential expression and GO term analysis</li>
-<li>Genetic map construction and QTL mapping</li>
+<li>RNAseq, WGCNA, differential expression and GO term analysis</li>
+<li>Genetic map construction and QTL mapping of diploid and polyploid crop species</li>
 <li>Genome-wide Association Study (GWAS)</li>
 <li>Genotyping by Sequencing (GBS)</li>
 <li>Genetic diversity and haplotype analysis</li>
@@ -272,7 +273,7 @@ Previously, I was a member of <a href="https://vanderknaaplab.uga.edu/index.html
     
     <div class="footer__inner">
         <div class="footer__content">
-            <span>&copy; 2023</span>
+            <span>&copy; 2024</span>
             <span><a href="http://manojsapkota.github.io"></a></span>
             <span>Manoj Sapkota</span>
             <span><a href="http://manojsapkota.github.io/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
